re-added carousel due to git issues

--- a/index.html
+++ b/index.html
@@ -83,6 +83,55 @@
                 <h2>The Mechanical System</h2>
             </div>
             <p>The mechanical system contains two main subsystems: an extending and contracting branch system and an opening and closing mechanical aperture system. The goal of the mechanical system was to have these two systems work in conjunction to provide a visualization of growth and decay of a tree.</p>
+              <div id="mech-carousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#mech-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#mech-carousel" data-slide-to="1"></li>
+                    <li data-target="#mech-carousel" data-slide-to="2"></li>
+                    <li data-target="#mech-carousel" data-slide-to="3"></li>
+                    <li data-target="#mech-carousel" data-slide-to="4"></li>
+                    <li data-target="#mech-carousel" data-slide-to="5"></li>
+                    <li data-target="#mech-carousel" data-slide-to="6"></li>
+                    <li data-target="#mech-carousel" data-slide-to="7"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/mech-carousel/full.png">
+                    </div>
+                    <div class="item">
+                        <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/mech-carousel/fullrender1.png">
+                    </div>
+                    <div class="item">
+                        <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/mech-carousel/fullrender2.png">
+                    </div>
+                    <div class="item">
+                        <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/mech-carousel/iris1.png">
+                    </div>
+                    <div class="item">
+                        <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/mech-carousel/iris2.png">
+                    </div>
+                    <div class="item">
+                        <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/mech-carousel/leadscrew1.png">
+                    </div>
+                    <div class="item">
+                        <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/mech-carousel/leadscrew3.png">
+                    </div>
+                    <div class="item">
+                        <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/mech-carousel/rake1.png">
+                    </div>                    
+                </div>
+
+                <!-- Controls -->
+                <a class="left carousel-control" href="#mech-carousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#mech-carousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
             <h3 id="branches">The Branches</h3>
             <h4>Inspiration</h4>
             <p>When determining the mechanism we would use to make the branches &ldquo;grow,&rdquo; simplicity and aesthetics were the two most important considerations. Simplicity is fairly self evident - given the limited time and money available, an easily implemented method was needed. Aesthetically, we wanted the growing mechanism to be elegant, continuous, and for the branches to be revealed, not predefined. Based on these criteria, we evaluated a number of different solutions.</p>
