fixed kat bio and footer

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                     <div class="thumbail"> 
                         <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/kstegner.jpg" style="width:90%;">
                         <h3>Katherine Stegner</h3>
-                        <span>Kat is a native of Spudville, Idaho, where she works at a combination potato farm and Taco Bell, as general manager. She's majoring in Potato Engineering, although she's currently on leave while leading an agricultural revolution in the Ukraine. Kat would say the list of her interests is too long, but in reality it consists of &rdquo;potatoes&ldquo; written 5,000 times.</span>
+                        <span>Hailing from Moscow, Idaho, Katherine is neither Russion nor a potato farmer and is majoring in Mechanical Engineering. Her interests include building things that move as well as playing on playgrounds and eating toast.</span>
                     </div>
                 </div>
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
@@ -340,7 +340,7 @@
         </section>
     </div>
     <section id="footer">
-        <span style="border-top: 1px solid #eeeeee">&copy; Noam Rubin 2013. No rights reserved #yolo</span>
+        <span style="border-top: 1px solid #eeeeee">&copy; 2013   Original Web Design by Noam Rubin</span>
     </section>
     </div>
 </body>
