fixed some typos

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </p>
             <h4>The Future</h4>
             <p>
-                The goal of this project was to have an elegant piece of mechatronic artwork that could be displayed for Olin&rsquo;s many visitors. We believe that this project resulted in a large step in the right direction, but some areas could use more work. [TODO] what areas?
+                The goal of this project was to have an elegant piece of mechatronic artwork that could be displayed for Olin&rsquo;s many visitors. We believe that this project resulted in a large step in the right direction, but some areas could use more work. Most of the work resides in using a material other than would for the iris gear chain, perhaps brass. In addition, we need to better mount the lead screw and add limit switches. From the software end, we'd like to add internet connectivity to the sculpture so that the tree could represent a live statistic, like energy usage in a home.
             </p>
             <p>
                 Next semester, we plan on applying for a student academic grant at Olin to fund our future endeavors with the ElectriciTree.
@@ -153,13 +153,13 @@
                 <em>Ball Bearing/Spherical Magnets</em>
             </h5>
             <p>
-                Based on how visually appealing the roller chain was, we wanted to find a solution that would look similar but have a smaller bend radius. Ball bearings matched worked well for this, but maintaining continuity isn&rsquo;t possible with balls bearings. Spherical magnets solved this last issue.
+                Based on how visually appealing the roller chain was, we wanted to find a solution that would look similar but have a smaller bend radius. Ball bearings matched worked well for this, but maintaining continuity isn&rsquo;t possible with ball bearings. Spherical magnets solved this last issue.
             </p>
             <h4>
                 Track Design
             </h4>
             <p>
-                The tracks consist of three, &#8539;&rdquo; acrylic sheets and 5mm magnetic spheres. The path for each of the five branches is cut into the middle plate to guide the magnets and the outer two plates are used primarily to constrain the magnets and prevent them from falling out of the track. Acrylic was chosen because of its optical transparence. Other materials would have served between from a strength or friction standpoint, but using a transparent material means it is difficult to see the track, thus maintaining the revealing aspect as the branches grow.
+                The tracks consist of three, &#8539;&rdquo; acrylic sheets and 5mm magnetic spheres. The path for each of the five branches is cut into the middle plate to guide the magnets and the outer two plates are used primarily to constrain the magnets and prevent them from falling out of the track. Acrylic was chosen because of its optical transparency. Other materials would have served between from a strength or friction standpoint, but using a transparent material means it is difficult to see the track, thus maintaining the revealing aspect as the branches grow.
             </p>
             <p>
                 One of the most difficult issues to deal with friction. As we experienced with the roller chain, pushing metal through curved paths in plastic makes the system difficult to drive. This issue was partially resolved by making gentle curves in the path rather than steep turns. Still, there was considerable friction. To reduce the friction to a manageable level, we coated the magnetic balls with a dry, Teflon lubricant.
@@ -311,6 +311,7 @@
                     <div class="thumbail"> 
                         <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/shivam.jpg" style="width:90%;">
                         <h3>Shivam Desai</h3>
+                        <h5>shivam {AT} students {DOT} olin {DOT} edu</h5>
                         <span>Straight out of Lomita, California, majoring in Electrical and Computer Engineering with a focus in Robotics. Interests include robotics, bioinspiration, shape memory alloys, control theory, and violent-gory-bloodbath-"Oh my god Danny Trejo just used that guy's intestines to rappel down the building!" movies. Shivam was part of a team of six students who created a wall climbing robot in six weeks on a $250 budget. "Why do something ordinary when you can do something EXTRA- ordinary?"</span>
                     </div>
                 </div>
@@ -318,6 +319,7 @@
                     <div class="thumbail"> 
                         <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/asa.jpg" style="width:90%;">
                         <h3>Asa Eckert-Erdheim</h3>
+                        <h5>asa {AT} students {DOT} olin {DOT} edu</h5>
                         <span>Asa is from Durham, North Carolina and is majoring in Engineering with a concentration in Robotics. His interests span a wide variety of academic fields, including robotics (especially the bio-inspired sort), sustainability, space exploration and engineering education. Outside of Olin, Asa enjoys a new sci-fi book, a tasty cheese and music that is at least 20 years old.</span>
                     </div>
                 </div>
@@ -325,6 +327,7 @@
                     <div class="thumbail"> 
                         <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/kstegner.jpg" style="width:90%;">
                         <h3>Katherine Stegner</h3>
+                       <h5> katherine {DOT} stegner {AT} students {DOT} olin {DOT} edu</h5>
                         <span>Hailing from Moscow, Idaho, Katherine is neither Russion nor a potato farmer and is majoring in Mechanical Engineering. Her interests include building things that move as well as playing on playgrounds and eating toast.</span>
                     </div>
                 </div>
@@ -332,6 +335,7 @@
                     <div class="thumbail"> 
                         <img src="https://dl.dropboxusercontent.com/u/11830885/elecanisms/noam_rubin.png" style="width:90%;">
                         <h3>Noam Rubin</h3>
+                        <h5>noam {AT} students {DOT} olin {DOT} edu</h5>
                         <span>Noam reigns from Los Angeles, but will be a San Francisco native in a few months. An Electrical and Computer engineer, Noam's interest span from robotics to interface design. Outside of school, Noam enjoys seeing the world and a good brewski.</span>
                     </div>
                 </div>
